final_flask.log
  File "/app/app.py", line 50
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
